# plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/doxygen/: engine.doxyfile.in
include/nil/dbms/plugin/: abstract.hpp  basic.hpp  configurable.hpp  container.hpp  descriptor.hpp  importer.hpp  initializable.hpp  initializer.hpp  loader.hpp  options_description.hpp  plugin.hpp  plugin_set.hpp  processor.hpp  unloader.hpp  variables_map.hpp
include/nil/dbms/plugin/detail/: extractors.hpp
test/: CMakeLists.txt  engine.cpp  plugin.cpp  plugins.cpp
